test_report.txt

> react-typescript-starter@0.1.0 test
> react-scripts test --coverage

FAIL src/App.test.tsx
  ● Test suite failed to run

    Jest encountered an unexpected token

    Jest failed to parse a file. This happens e.g. when your code or its dependencies use non-standard JavaScript syntax, or when Jest is not configured to support such syntax.

    Out of the box Jest supports Babel, which will be used to transform your files into valid JS based on your Babel configuration.

    By default "node_modules" folder is ignored by transformers.

    Here's what you can do:
     • If you are trying to use ECMAScript Modules, see https://jestjs.io/docs/ecmascript-modules for how to enable it.
     • If you are trying to use TypeScript, see https://jestjs.io/docs/getting-started#using-typescript
     • To have some of your "node_modules" files transformed, you can specify a custom "transformIgnorePatterns" in your config.
     • If you need a custom transformation specify a "transform" option in your config.
     • If you simply want to mock your non-JS modules (e.g. binary assets) you can stub them out with the "moduleNameMapper" config option.

    You'll find more details and examples of these config options in the docs:
    https://jestjs.io/docs/configuration
    For information about custom transformations, see:
    https://jestjs.io/docs/code-transformation

    Details:

    /home/runner/work/Team15-PlanetGarden/Team15-PlanetGarden/node_modules/react-dnd/dist/index.js:1
    ({"Object.<anonymous>":function(module,exports,require,__dirname,__filename,jest){export * from './core/index.js';
                                                                                      ^^^^^^

    SyntaxError: Unexpected token 'export'

      3 | import { Item } from "../interfaces/Item";
      4 | import { EditItem } from "./EditItem";
    > 5 | import { useDrag } from "react-dnd";
        | ^
      6 | import { ExpandableSection } from "./Expandable";
      7 |
      8 | export interface ItemViewProps {

      at Runtime.createScriptFromCode (node_modules/jest-runtime/build/index.js:1728:14)
      at Object.<anonymous> (src/components/ItemView.tsx:5:1)
      at Object.<anonymous> (src/components/DisplayItem.tsx:28:1)
      at Object.<anonymous> (src/pages/Inventory.tsx:2:1)
      at Object.<anonymous> (src/App.tsx:7:1)
      at Object.<anonymous> (src/App.test.tsx:3:1)
      at TestScheduler.scheduleTests (node_modules/@jest/core/build/TestScheduler.js:333:13)
      at runJest (node_modules/@jest/core/build/runJest.js:404:19)
      at _run10000 (node_modules/@jest/core/build/cli/index.js:320:7)
      at runCLI (node_modules/@jest/core/build/cli/index.js:173:3)

------------------------|---------|----------|---------|---------|-------------------
File                    | % Stmts | % Branch | % Funcs | % Lines | Uncovered Line #s 
------------------------|---------|----------|---------|---------|-------------------
All files               |       0 |        0 |       0 |       0 |                   
 src                    |       0 |      100 |       0 |       0 |                   
  App.tsx               |       0 |      100 |       0 |       0 | 16                
  interfaces.ts         |       0 |        0 |       0 |       0 |                   
 src/assets             |       0 |      100 |     100 |       0 |                   
  instances.tsx         |       0 |      100 |     100 |       0 | 26-321            
 src/components         |       0 |        0 |       0 |       0 |                   
  AddItem.tsx           |       0 |      100 |       0 |       0 | 10-141            
  AdminList.tsx         |       0 |        0 |       0 |       0 | 16-61             
  DisplayItem.tsx       |       0 |        0 |       0 |       0 | 36-145            
  EditItem.tsx          |       0 |      100 |       0 |       0 | 11-126            
  Expandable.tsx        |       0 |        0 |       0 |       0 | 8-16              
  ItemView.tsx          |       0 |        0 |       0 |       0 | 19-147            
  Navbar.tsx            |       0 |        0 |       0 |       0 | 10-32             
  RoleSelect.tsx        |       0 |        0 |       0 |       0 | 6-36              
  SortItems.tsx         |       0 |        0 |       0 |       0 | 33-124            
  UserDropDownSuper.tsx |       0 |        0 |       0 |       0 | 9-103             
  UserList.tsx          |       0 |        0 |       0 |       0 | 8-16              
  UserSelect.tsx        |       0 |        0 |       0 |       0 | 7-138             
 src/hooks              |       0 |        0 |       0 |       0 |                   
  useSessionStorage.ts  |       0 |        0 |       0 |       0 | 4-19              
 src/interfaces         |       0 |        0 |       0 |       0 |                   
  Item.ts               |       0 |        0 |       0 |       0 |                   
  User.ts               |       0 |        0 |       0 |       0 |                   
 src/pages              |       0 |      100 |       0 |       0 |                   
  About.tsx             |       0 |      100 |       0 |       0 | 5                 
  Home.tsx              |       0 |      100 |       0 |       0 | 5                 
  Inventory.tsx         |       0 |      100 |       0 |       0 | 5                 
  Shop.tsx              |       0 |      100 |       0 |       0 | 8                 
  Users.tsx             |       0 |      100 |       0 |       0 | 6                 
------------------------|---------|----------|---------|---------|-------------------
Test Suites: 1 failed, 1 total
Tests:       0 total
Snapshots:   0 total
Time:        3.601 s
Ran all test suites.
